--- a/CoditechLicenseApplication/Views/Shared/_Layout.cshtml
+++ b/CoditechLicenseApplication/Views/Shared/_Layout.cshtml
@@ -19,23 +19,24 @@
     <meta name="keywords" content="">
     <meta name="author" content="PIXINVENT">
     <title>@ViewBag.Title | @title </title>
-    <title>Biorad Medisys Pvt Ltd.</title>
+    <title>Coditech Software Pvt Ltd.</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/Content/style.css">
 </head>
 <!-- END: Head-->
 <!-- BEGIN: Body-->
-<body style="background: url('../../Content/Images/main-bg-v3.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover; ">
+<body style="background: url('../Content/Images/main-bg-v3.png'); background-position: center; background-repeat: no-repeat; background-size: cover; ">
     <header class="main-header-wrapper d-flex justify-content-between align-items-center">
         <div class="logo-container">
-            <img src="~/Content/Images/biorad-logo.svg" alt="Logo" />
+            <img src="~/Content/Images/ApplicationLogo.png" height="40px" width="175px" alt="Logo" />
         </div>
         <div class="user-login-wrapper">
             <nav class="profile-navigation d-flex gap-10">
                 <div class="sign-in-log-off">
                     <a href="#" class="base-font-size">
-                        <i class="fa fa-solid fa-user"></i> @userData.FirstName @userData.LastName
+                        <i class="fa fa-solid fa-user"></i>
+                        @userData.FirstName @userData.LastName
                     </a>
                 </div>
                 <div class="sign-in-log-off">
