--- a/CoditechLicenseApplication/Views/ApplicationLicenseDetails/List.cshtml
+++ b/CoditechLicenseApplication/Views/ApplicationLicenseDetails/List.cshtml
@@ -42,8 +42,8 @@
                                         <td>@item.IsActive</td>
                                         <td>
                                             <div class="align-items-center d-flex justify-content-around action-container">
-                                                <a href="../@controllerName/Edit?productMasterId=@item.ApplicationLicenseId" class="action-icon edit-product" title="Edit"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-                                                <a href="../@controllerName/Delete?productMasterIds=@item.ApplicationLicenseId" class="action-icon delete-product" title="Delete"><i class="fa fa-trash" aria-hidden="true"></i></a>
+                                                <a href="../@controllerName/Edit?applicationLicenseId=@item.ApplicationLicenseId" class="action-icon edit-product" title="Edit"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                                                <a href="../@controllerName/Delete?applicationLicenseId=@item.ApplicationLicenseId" class="action-icon delete-product" title="Delete"><i class="fa fa-trash" aria-hidden="true"></i></a>
                                             </div>
                                         </td>
                                     </tr>
