--- a/CoditechLicenseApplication/Views/ApplicationLicenseDetails/CreateEdit.cshtml
+++ b/CoditechLicenseApplication/Views/ApplicationLicenseDetails/CreateEdit.cshtml
@@ -26,44 +26,51 @@
                     @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { @class = "form form-horizontal" }))
                     {
                         @Html.HiddenFor(x => x.ApplicationLicenseId)
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="mb-3">
-                                    <label for="product-name" class="form-label">Client Name<span class="required">*</span> :</label>
-                                    @Html.TextBoxFor(x => x.ClientName, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(x => x.ClientName, null, new { @class = "red validation-message", style = "color: red;" })
-                                </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label for="product-name" class="form-label">Client Name<span class="required">*</span> :</label>
+                                @Html.TextBoxFor(x => x.ClientName, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(x => x.ClientName, null, new { @class = "red validation-message", style = "color: red;" })
                             </div>
-                            <div class="col-lg-6">
-                                <div class="mb-3">
-                                    <label for="product-name" class="form-label">License Type<span class="required">*</span> :</label>
-                                    @Html.TextBoxFor(x => x.LicenseType, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(x => x.LicenseType, null, new { @class = "red validation-message", style = "color: red;" })
-                                </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label for="product-name" class="form-label">License Type<span class="required">*</span> :</label>
+                                @Html.TextBoxFor(x => x.LicenseType, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(x => x.LicenseType, null, new { @class = "red validation-message", style = "color: red;" })
                             </div>
-                            <div class="col-lg-6">
-                                <div class="mb-3">
-                                    <label for="product-name" class="form-label">Valid From Date<span class="required">*</span> :</label>
-                                    @Html.TextBoxFor(x => x.ValidFromDate, new { @class = "form-control", @id = "valid-from-date", type = "date" })
-                                    @Html.ValidationMessageFor(x => x.ValidFromDate, null, new { @class = "red validation-message", style = "color: red;" })
-                                </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="mb-3">
+                                <label for="product-name" class="form-label">Domain Name<span class="required">*</span> :</label>
+                                @Html.TextBoxFor(x => x.DomainName, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(x => x.DomainName, null, new { @class = "red validation-message", style = "color: red;" })
                             </div>
-                            <div class="col-lg-6">
-                                <div class="mb-3">
-                                    <label for="product-name" class="form-label">Valid Upto Date<span class="required">*</span> :</label>
-                                    @Html.TextBoxFor(x => x.ValidUptoDate, new { @class = "form-control", @id = "valid-upto-date", type = "date" })
-                                    @Html.ValidationMessageFor(x => x.ValidUptoDate, null, new { @class = "red validation-message", style = "color: red;" })
-                                </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label for="product-name" class="form-label">Valid From Date<span class="required">*</span> :</label>
+                                @Html.TextBoxFor(x => x.ValidFromDate, new { @class = "form-control", @id = "valid-from-date", type = "date" })
+                                @Html.ValidationMessageFor(x => x.ValidFromDate, null, new { @class = "red validation-message", style = "color: red;" })
                             </div>
-                            <div class="col-lg-6">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
-                                    <div class="form-check">
-                                        @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                    </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label for="product-name" class="form-label">Valid Upto Date<span class="required">*</span> :</label>
+                                @Html.TextBoxFor(x => x.ValidUptoDate, new { @class = "form-control", @id = "valid-upto-date", type = "date" })
+                                @Html.ValidationMessageFor(x => x.ValidUptoDate, null, new { @class = "red validation-message", style = "color: red;" })
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                <div class="form-check">
+                                    @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
                                 </div>
                             </div>
                         </div>
+                    </div>
                         <div class="align-items-center d-flex form-action justify-content-center">
                             <button type="submit" class="btn login-btn btn-set-default">Save</button>
                         </div>
