--- a/CoditechLicenseApplication/Views/Shared/_Layout.cshtml
+++ b/CoditechLicenseApplication/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
 </head>
 <!-- END: Head-->
 <!-- BEGIN: Body-->
-<body style="background: url('../Content/Images/main-bg-v3.png'); background-position: center; background-repeat: no-repeat; background-size: cover; ">
+<body style="background: url('../Images/main-bg-v3.png'); background-position: center; background-repeat: no-repeat; background-size: cover; ">
     <header class="main-header-wrapper d-flex justify-content-between align-items-center">
         <div class="logo-container">
-            <img src="~/Content/Images/ApplicationLogo.png" height="40px" width="175px" alt="Logo" />
+            <img src="~/Images/ApplicationLogo.png" height="40px" width="175px" alt="Logo" />
         </div>
         <div class="user-login-wrapper">
             <nav class="profile-navigation d-flex gap-10">
