--- a/CoditechLicenseApplication/Views/ApplicationLicenseDetails/CreateEdit.cshtml
+++ b/CoditechLicenseApplication/Views/ApplicationLicenseDetails/CreateEdit.cshtml
@@ -41,11 +41,17 @@
                                 @Html.ValidationMessageFor(x => x.LicenseType, null, new { @class = "red validation-message", style = "color: red;" })
                             </div>
                         </div>
-                        <div class="col-lg-12">
+                        <div class="col-lg-6">
                             <div class="mb-3">
                                 <label for="product-name" class="form-label">Domain Name<span class="required">*</span> :</label>
                                 @Html.TextBoxFor(x => x.DomainName, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(x => x.DomainName, null, new { @class = "red validation-message", style = "color: red;" })
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label for="product-name" class="form-label">API Key :</label><br />
+                                @Html.TextBoxFor(x => x.APIKey, new { @class = "form-control", disabled = "disabled" })
                             </div>
                         </div>
                         <div class="col-lg-6">
